update, main.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <title>JS_dom</title>
 </head>
 <body>
-    <div id="target">Tar</div>
+    <h1>Title</h1>
+    <ul>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+    </ul>
    <script src="./main.js"></script> 
 </body>
 </html>
