--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
     <h1>Title</h1>
     <ul>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+        <li>item 5</li>
+        <li>item 6</li>
     </ul>
    <script src="./main.js"></script> 
 </body>
