update, main.js

--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
     <title>JS_dom</title>
 </head>
 <body>
-    <h1>Title</h1>
-    <ul>
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-        <li>item 4</li>
-        <li>item 5</li>
-        <li>item 6</li>
-    </ul>
+    <h1 title="the title">Title</h1>
    <script src="./main.js"></script> 
 </body>
 </html>
