--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>JS_dom</title>
 </head>
 <body>
-    <h1 title="the title">Title</h1>
+    <h1 title="the title" data-app-id="app00">Title</h1>
    <script src="./main.js"></script> 
 </body>
 </html>
