--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>JS_dom</title>
+    <style>
+        .box {
+            width: 100px;
+            height: 100px;
+            background: gray;
+        }
+        .border-pink {
+            border-bottom: 5px solid pink;
+        }
+    </style>
 </head>
 <body>
-    <h1 title="the title" data-app-id="app00">Title</h1>
+    <div class="box"></div>
    <script src="./main.js"></script> 
 </body>
 </html>
