--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <div class="box"></div>
+    <div class="box border-pink"></div>
    <script src="./main.js"></script> 
 </body>
 </html>
