update, main.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>JS_dom</title>
 </head>
 <body>
+    <input type="text"  value="hello">
+    <textarea>
+    hell hell
+    </textarea>
    <script src="./main.js"></script> 
 </body>
 </html>
