update, main.js

--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-    <meta charset="UTF-8">
-    <title>JS_dom</title>
+    <meta charset="utf-8">
+    <title>JavaScript Basics</title>
 </head>
+
 <body>
-    <input type="text"  value="hello">
-    <textarea>
-    hell hell
-    </textarea>
-   <script src="./main.js"></script> 
+    <input type="checkbox" name="os" value="mac"> macOS
+    <input type="checkbox" name="os" value="win" checked> Windows
+    <hr>
+    <input type="radio" name="color" value="red" checked> Red
+    <input type="radio" name="color" value="blue"> Blue
+    <hr>
+    <select>
+        <option>item 0</option>
+        <option selected>item 1</option>
+        <option>item 2</option>
+    </select>
+
+    <script src="./main.js"></script>
 </body>
+
 </html>
