update, main.js

--- a/index.html
+++ b/index.html
@@ -7,18 +7,7 @@
 </head>
 
 <body>
-    <input type="checkbox" name="os" value="mac"> macOS
-    <input type="checkbox" name="os" value="win" checked> Windows
-    <hr>
-    <input type="radio" name="color" value="red" checked> Red
-    <input type="radio" name="color" value="blue"> Blue
-    <hr>
-    <select>
-        <option>item 0</option>
-        <option selected>item 1</option>
-        <option>item 2</option>
-    </select>
-
+    <button>押しちゃダメ</button>
     <script src="./main.js"></script>
 </body>
 
