--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>JavaScript Basics</title>
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
-    <div></div>
+    <p>Hell. Hell. <span class="hidden"> Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. </span><a href="">read more ...</a></p>
     <script src="./main.js"></script>
 </body>
 
