--- a/index.html
+++ b/index.html
@@ -5,15 +5,53 @@
     <meta charset="utf-8">
     <title>JavaScript Basics</title>
     <style>
-        .hidden {
-            display: none;
+        body {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .box {
+            width: 100px;
+            height: 100px;
+            background: skyblue;
+            cursor: pointer; 
+            transition: 0.8s;
+            margin: 0 8px 8px 0;
+            text-align: center;
+            line-height: 100px;
+        }
+        .win {
+            background: pink;
+            border-radius: 80%;
+            transform: rotate3d(360deg);
+        }
+        .lose {
+            transform: scale(0.9);
         }
     </style>
 </head>
-
 <body>
-    <p>Hell. Hell. <span class="hidden"> Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. Hell. </span><a href="">read more ...</a></p>
-    <script src="./main.js"></script>
-</body>
+    <script>
+        'use strict';
+        
+        const num = 8;
+        const winner = Math.floor(Math.random() * num);
 
+        for (let i = 0; i < num; i++) {
+            const div = document.createElement('div');
+            div.classList.add('box');
+
+            div.addEventListener('click', () => {
+                if (i === winner) {
+                    div.textContent = 'Win';
+                    div.classList.add('win');
+                } else {
+                    div.textContent = 'Lose';
+                    div.classList.add('lose');
+                }
+            });
+            document.body.appendChild(div);
+        }
+
+    </script>
+</body>
 </html>
